--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     //Glide
     implementation "com.github.bumptech.glide:glide:4.13.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
+    //Border Round
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
